Addition of school metric ranking

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,15 +40,15 @@
     "neighborhoods = pd.read_csv(\"https://data.wprdc.org/dataset/40188e1c-6d2e-4f20-9391-607bd3054949/resource/9890875b-c1d1-4e64-8fc9-a4a8dc433745/download/housing.csv\")\n",
     "neighborhood_list = neighborhoods.loc[:, \"Neighborhood\"]                                             \n",
     "#pgh_crime_data.head()\n",
-    "for i in range(pgh_crime_data[\"INCIDENTNEIGHBORHOOD\"].size):\n",
-    "    if (pgh_crime_data.loc[i, \"INCIDENTNEIGHBORHOOD\"] not in neighborhood_list):\n",
-    "        pgh_crime_data.drop(i)\n",
+    "#for i in range(pgh_crime_data[\"INCIDENTNEIGHBORHOOD\"].size):\n",
+    "#    if (pgh_crime_data.loc[i, \"INCIDENTNEIGHBORHOOD\"] not in neighborhood_list):\n",
+    " #       pgh_crime_data.drop(i)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "Arlington Heights                   96                     96  101  101  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "Name: COUNT, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,16 +289,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ffb5c8e7b38>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2c8e3c83c8>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "Name: COUNT, dtype: int64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,59 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a filter function to knock out any district that had less then 300 total eligable students.\n",
+    "schools_new = pgh_schools.loc[pgh_schools['Estimate; Total:'] > 300]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.options.mode.chained_assignment = None\n",
+    "school2 = schools_new\n",
+    "i = 0\n",
+    "\n",
+    "while i < school2[\"Id\"].size:\n",
+    "    school2.iloc[i, 1] = school2.iloc[i, 4] / school2.iloc[i, 2]\n",
+    "    i = i + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "school2.sort_values(by=['Id'], inplace=True)\n",
+    "i = 0\n",
+    "while i < school2[\"Id\"].size:\n",
+    "    school2.iloc[i, 1] = school2.iloc[i, 1] * 100\n",
+    "    i = i + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'school2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-01fffd062787>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mschool2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'school2' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "school2.iloc[:, 0:2]"
+   ]
   },
   {
    "cell_type": "code",
